# streaming-browser

./: .gitignore  CMakeLists.txt  FINAL_REPORT.md  PROGRESS.md  README.md  browser-viewer.conf.yml  streaming-browser.example.yaml
.github/: copilot-instructions.md
cmake/: DownloadCEF.cmake
config/: compositor.example.yaml  producer.browser.yaml  producer.compositor-input.yaml  producer.compositor.yaml  producer.example.yaml  producer.input-routing.yaml  viewer.browser.yaml  viewer.example.yaml
docs/: compositor.md  device-routing.md  streaming-browser.md
experiments/usb-routing/: CMakeLists.txt  run.ps1
experiments/usb-routing/src/: device_identity.cc  device_identity.h  emergency_chord.cc  emergency_chord.h  gameinput_v0_probe.cc  main.cc  raw_input_capture.cc  raw_input_capture.h  websocket_client.cc  websocket_client.h
experiments/usb-routing/tests/: emergency_chord_tests.cc
scripts/: build.ps1  configure.ps1  package.ps1  run-capture-spike.ps1  run-compositor-demo.ps1  run-config-demo.ps1  run-demo.ps1  run-feedback-demo.ps1  run-frame-stress.ps1  run-input-routing.ps1  run-viewport-manager.ps1  test-alpha.ps1  test-compositor-e2e.ps1  test-compositor-soak.ps1  test-e2e.ps1  test-package.ps1  test-soak.ps1  test.ps1
src/: CMakeLists.txt
src/common/: CMakeLists.txt  configuration.cc  configuration.h  logging.cc  logging.h  pipe_io.cc  pipe_io.h  pipe_security.cc  pipe_security.h  protocol.cc  protocol.h  win_handle.h
src/compositor/: CMakeLists.txt  compositor_configuration.cc  compositor_configuration.h  compositor_main.cc  compositor_renderer.cc  compositor_renderer.h  layout_protocol.cc  layout_protocol.h  layout_server.cc  layout_server.h
src/compositor/win/: compatibility.manifest  streaming_compositor.exe.manifest
src/input_routing/: CMakeLists.txt  event_queue.cc  event_queue.h  route_state.cc  route_state.h  routing_protocol.cc  routing_protocol.h
src/producer/: CMakeLists.txt  app.cc  app.h  browser_client.cc  browser_client.h  d3d_frame_pipeline.cc  d3d_frame_pipeline.h  launcher_window.cc  launcher_window.h  network_input_server.cc  network_input_server.h  producer_entry.cc  stream_server.cc  stream_server.h
src/producer/win/: streaming_browser.exe.manifest
src/viewer/: CMakeLists.txt  d3d_renderer.cc  d3d_renderer.h  stream_client.cc  stream_client.h  viewer_main.cc
src/viewer/win/: streaming_viewer.exe.manifest
tests/: CMakeLists.txt  compositor_configuration_tests.cc  compositor_layout_protocol_tests.cc  configuration_tests.cc  input_routing_tests.cc  network_input_tests.cc  pipe_tests.cc  protocol_tests.cc
tests/fixtures/: alpha.html  compositor-client.js  feedback-slider.html  frame-stress.html  input-routing.html  input.html  popup.html  viewport-manager.html
